# qlogic-rs

./: .gitignore  Cargo.toml  Jenkinsfile  README.md
algebra/: Cargo.toml
algebra/benches/: lib.rs  vector.rs
algebra/src/: error.rs  interface.rs  lib.rs  num.rs
algebra/src/field/: identities.rs  mod.rs
algebra/src/matrix/: interface.rs  iter.rs  mod.rs
algebra/src/matrix/core/: mod.rs  ops.rs  structure.rs
algebra/src/matrix/macro_core/: mod.rs  structure.rs
algebra/src/matrix/matrix_ops/: balance.rs  diagonal.rs  elementary.rs  inverse.rs  kronecker.rs  lu.rs  mod.rs  qr.rs  sub_matrix.rs  substitution.rs  transpose.rs  vector.rs
algebra/src/matrix/ops/: balance.rs  eigenvalue.rs  elementary.rs  gauss.rs  givens.rs  householder.rs  inverse.rs  kronecker.rs  lu.rs  minor.rs  mod.rs  qr.rs  schur.rs  submatrix.rs  substitution.rs  transpose.rs  vector.rs
algebra/src/matrix/tests/: mod.rs  test_index.rs  test_ops.rs  test_transform.rs
algebra/src/vector/: interface.rs  mod.rs  structure.rs  vector_ops.rs  vector_space.rs
algebra/src/vector/concrete/: generic.rs  mod.rs  std_array.rs  std_vec.rs
algebra/src/vector/ops/: mod.rs  norm.rs  sub.rs
algebra/src/vector_space/: blas.rs  mod.rs
algebra/tests/: nalgebra.rs
vector/: Cargo.toml
vector/benches/: lib.rs  vector.rs
vector/benches/comparative/: cmp_nalgebra.rs  cmp_ndarray.rs  mod.rs
vector/src/: lib.rs  structural.rs
vector/src/array/: binops.rs  mod.rs  structural.rs  uniops.rs
vector/src/space/: binops.rs  blas_ops.rs  mod.rs  structural.rs  uniops.rs
vector/tests/: vector.rs
(+96 files in other folders)
