[package]
name = "algebra"
version = "0.1.0"
authors = ["Josh Fourie <josh.fourie97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2" }
typenum = { version = "1.12.0" }
paste = "0.1.12"

rayon = { version = "1.3.0", optional = true }

[features]
multithread = [ "rayon" ]
manual = [ ]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "algebra_benchmarks"
path = "benches/lib.rs"
harness = false