[package]
name = "vector"
version = "0.1.0"
authors = ["Josh Fourie <josh.fourie97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2" 
typenum = "1.12.0" 
paste = "0.1.12"

rayon = { version = "1.3.0", optional = true }

[features]
multithread = [ "rayon" ]

[dev-dependencies]
criterion = "0.3"
nalgebra = "0.21.0"
rand = "0.7.3"

algebra = { path = "../algebra" }

[[bench]]
name = "algebra_benchmarks"
path = "benches/lib.rs"
harness = false
